# ContractScanner

./: .env.example  .gitignore  Cargo.toml  PROJECT_BLUEPRINT.md  README.md  SUBMISSION.md  foundry.toml  instructions.docx
contracts/: ScanPayments.sol
docker/: slither.Dockerfile
docs/: ARCHITECTURE.md
examples/: Vault.sol
migrations/: 0001_init.sql  0002_scan_error_code.sql  0003_pending_source.sql
scripts/: deploy-arc.ps1  smoke-test.ps1
src/: app.rs  main.rs  util.rs
src/analyzers/: finding_normalizer.rs  input_processor.rs  llm_analyzer.rs  mod.rs  pipeline.rs  report_generator.rs  risk_scorer.rs  slither_adapter.rs  solidity_preprocessor.rs
src/analyzers/testdata/: slither_reentrancy.json
src/api/: health.rs  mod.rs  scan_routes.rs
src/error/: mod.rs
src/infra/: config.rs  db.rs  docker_runner.rs  llm_client.rs  mod.rs  payment_watcher.rs  rate_limit.rs  reaper.rs  slither_runner.rs  temp_files.rs
src/models/: dto.rs  finding.rs  metadata.rs  mod.rs  raw_finding.rs  scan.rs
src/repositories/: finding_repository.rs  mod.rs  report_repository.rs  scan_repository.rs
src/services/: scan_service.rs
static/: index.html
